crates/uitest/fixtures/ty_check/inline_attr_duplicate.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/inline_attr_duplicate.fe
---
error[12-0003]: duplicate `#[inline]` attribute on fn `bad`
  ┌─ inline_attr_duplicate.fe:2:1
  │
2 │ #[inline(always)]
  │ ^^^^^^^^^^^^^^^^^ remove the extra `#[inline]` attribute
